fix paragraph spacing and line-height

--- a/mail/stylesheets/post_notification.scss
+++ b/mail/stylesheets/post_notification.scss
@@ -21,7 +21,7 @@ td {
 a { text-decoration: none }
 a span { color: #a6352c ; text-decoration: none}
 
-div.p {  margin: 0; line-height: 24px ; font-size: 14px; font-family: Helvetica, Arial, sans-serif; }
+div.p {  margin: 0 0 5px 0; line-height: 16px ; font-size: 14px; font-family: Helvetica, Arial, sans-serif; }
 
 img { border: 0 }
 
